# de_zoomcamp

./: .gitignore  README.md  Untitled.ipynb  ingest_data.py  notebook.ipynb  pyproject.toml  uv run python ingest_data.md
wk1_hw/: Dockerfile  docker-compose.yaml  ingestion.ipynb  ingestion.py  pipeline.py  pre_q3_q6.md  pyproject.toml  q1.md  q2.drawio  q3_q7.sql
wk1_lesson/: Dockerfile  ingest_data.py  notebook.ipynb  notes.md
wk2_hw/: docker-compose.yml  q1_q6.sql
wk3_hw/: load_yellow_taxi_data.py  q1_q9.sql
wk4_hw/: load_fhv.py  q1_q6.md
wk4_lesson/: ingest_taxi.ipynb
wk5_hw/: duckdb.db  q1_q7.md
wk5_hw/my-pipeline/pipeline/: pipeline.yml
wk5_hw/my-pipeline/pipeline/assets/ingestion/: payment_lookup.asset.yml  requirements.txt  trips.py
wk5_hw/my-pipeline/pipeline/assets/reports/: trips_report.sql
wk5_hw/my-pipeline/pipeline/assets/staging/: trips.sql
wk5_hw_dlt/: .gitignore  calculate_proportion.py  calculate_tips.py  inspect_taxi_dates.py  main.py  pyproject.toml  q1_q3.md  taxi_pipeline.py  wk5_hw_dlt_pipeline.py
wk5_hw_dlt/.dlt/pipelines/taxi_pipeline/: trace.pickle
wk5_lesson_dlt/: main.py  open_library_analysis.py  open_library_pipeline.py  pyproject.toml
