[project]
name = "de-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.2",
    "jupyterlab-git>=0.51.4",
    "pgcli>=4.4.0",
]
